--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,24 @@
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+//$menuText:#bfcbd9;
+//$menuActiveText:#409EFF;
+//$subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
+//
+//$menuBg:#304156;
+//$menuHover:#263445;
+//
+//$subMenuBg:#1f2d3d;
+//$subMenuHover:#001528;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$menuText:#B9B9B9;
+$menuActiveText:#FFFFFF;
+$subMenuActiveText:#B9B9B9;
+
+$menuBg:#233431;
+$menuHover:#1A1F1E;
+
+$subMenuBg:#233431;
+$subMenuHover:#17BF70;
 
 $sideBarWidth: 210px;
 
